--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="card__profile">
             <div class="card__photo">
-              <img src="./images/avatar-michelle.jpg" alt="Photo">
+              <img src="./images/avatar-michelle.jpg" alt="Avatar">
             </div>
             <div class="card__name">
               <h2>Michelle Appleton</h2>
